--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -80,12 +80,12 @@ specified in \ref{Lex.Literal.Kinds}.
 \Sub{This}{Expr.Primary.This}
 
 \p The keyword \keyword{this} names a reference to the implicit object of
-non-static member functions or non-static data member initializers. The
-\keyword{this} parameter is always a \textit{prvalue} of
-non-\textit{cv-qualified}
-type\footnote{\href{https://github.com/microsoft/hlsl-specs/blob/main/proposals/0007-const-instance-methods.md}{HLSL
-Specs Proposal 0007} proposes adopting C++-like syntax and semantics for
-\textit{cv-qualified} \keyword{this} references.}.
+non-static member functions. The \keyword{this} parameter is always a
+\textit{prvalue} of non-\textit{cv-qualified}type.
+\footnote{
+  \href{https://github.com/microsoft/hlsl-specs/blob/main/proposals/0007-const-instance-methods.md}
+  {HLSL Specs Proposal 0007} proposes adopting C++-like syntax and semantics for
+  \textit{cv-qualified} \keyword{this} references.}
 
 \Sub{Parenthesis}{Expr.Primary.Paren}
 
