Use \terminal command correctly

--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -68,7 +68,7 @@ conversions} are:
   \define{primary-expression}\br
   literal\br
   \keyword{this}\br
-  \texttt{(} expression \texttt{)}\br
+  \terminal{(} expression \terminal{)}\br
   id-expression\br
 \end{grammar}
 
