Add a file to store placeholder reference points
Declaring placeholder headings allows us to just put the references in
as we're writing earlier parts of the document instead of leaving FIXME
comments around.

--- a/specs/language/hlsl.tex
+++ b/specs/language/hlsl.tex
@@ -74,6 +74,8 @@
 \input{conversions}
 \input{expressions}
 
+\input{placeholders} % Declare placeholder references
+
 \clearpage
 
 \label{glossaries}
