--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -102,7 +102,7 @@ computing adjacent values. In pixel shaders a \gls{quad} may represent four
 adjacent pixels and \gls{quad} operations allow passing data between adjacent
 lanes. In compute shaders quads may be one or two dimensional depending on the
 workload dimensionality described in the \texttt{numthreads} attribute on the
-entry function. (FIXME: Add reference to attribute)
+entry function (\ref{Decl.Attr.Entry}).
 
 \Sub{\gls{threadgroup}}{Intro.Model.Group}
 
