--- a/specs/language/lex.tex
+++ b/specs/language/lex.tex
@@ -10,8 +10,7 @@ the \texttt{\#include} preprocessing directive conforming to the \gls{isoC}
 preprocessor specification.
 
 \p An implementation may implicitly include additional sources as required to
-expose the \acrshort{hlsl} library functionality as defined in (FIXME: Add
-reference to library chapter).
+expose the \acrshort{hlsl} library functionality as defined in (\ref{Runtime}).
 
 \Sec{Phases of Translation}{Lex.Phases}
 
