--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -86,6 +86,12 @@ non-static member functions. The \keyword{this} parameter is always a
   \href{https://github.com/microsoft/hlsl-specs/blob/main/proposals/0007-const-instance-methods.md}
   {HLSL Specs Proposal 0007} proposes adopting C++-like syntax and semantics for
   \textit{cv-qualified} \keyword{this} references.}
+  
+\p A \keyword{this} expression shall not appear within the declaration of a
+static member function, except as an \textit{unevaluated operand}. When used as
+an \textit{unevaluated operand}, the type of the \keyword{this} expression is
+defined.
+\p The \keyword{this} expression may not appear in any other context.
 
 \Sub{Parenthesis}{Expr.Primary.Paren}
 
