--- a/specs/language/macros.tex
+++ b/specs/language/macros.tex
@@ -19,6 +19,7 @@
   \newcommand{\define}[1]{{\textit{##1}\textnormal{:}}}
   \newcommand{\terminal}[1]{{\texttt{##1}}}
   \newcommand{\br}{\hfill\\*}
+  \newcommand{\opt}[1]{{##1\textsubscript{\textit{opt}}}}
 
   \renewcommand{\texttt}[1]{{\small\ttfamily\upshape ##1}}
 
