Updates based on feedback by @dmpots.
Thank you!

--- a/specs/language/hlsl.tex
+++ b/specs/language/hlsl.tex
@@ -10,6 +10,8 @@
 \usepackage{titlesec}
 \usepackage{enumitem}
 \usepackage[hidelinks]{hyperref}
+\usepackage{tikz}
+\usetikzlibrary{arrows,automata,positioning}
 
 \titleformat{\chapter}
   {\LARGE\bfseries}{\thechapter}{10pt}{}
