[Expr] Add Expr.Post.Call
This section specifies how HLSL function calls work as well as how
argument and paramters are represented, their lifetimes and semantics.

--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -1,4 +1,5 @@
 \Ch{Declarations}{Decl}
+\Sec{Function Definitions}{Decl.Function}
 \Sec{Attributes}{Decl.Attr}
 \Sub{Entry Attributes}{Decl.Attr.Entry}
 \Ch{Overloading}{Overload}
