Add missing reference to Overload

--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -1,4 +1,5 @@
 \Ch{Declarations}{Decl}
 \Sec{Attributes}{Decl.Attr}
 \Sub{Entry Attributes}{Decl.Attr.Entry}
+\Ch{Overloading}{Overload}
 \Ch{Runtime}{Runtime}
