--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -172,7 +172,7 @@ is a member function name.
 
 \p When a function is called, each parameter shall be initialized with its
 corresponding argument. The order in which parameters are initialized is
-undefined. \footnote{Today in DXC targeting DXIL matches the Microsoft C++ ABI
+unspecified. \footnote{Today in DXC targeting DXIL matches the Microsoft C++ ABI
 and evaluates argument expressions right-to-left, while SPIR-V generation
 matches the Itanium ABI evaluating parameters left-to-right. There are good
 arguments for unifying these behaviors, and arguments for keeping them
