--- a/specs/language/expressions.tex
+++ b/specs/language/expressions.tex
@@ -138,8 +138,8 @@ as the same non-parenthesized expression.
 \begin{grammar}
   \define{postfix-expression}\br
   primary-expression\br
-  postfix-expression \terminal{[} expression \terminal{]}\br
-  postfix-expression \terminal{[} braced-init-list \terminal{]}\br
+  postfix-expression [ expression ]\br
+  postfix-expression [ braced-init-list ]\br
   postfix-expression \terminal{(} \opt{expression-list} \terminal{)}\br
   simple-type-specifier \terminal{(} \opt{expression-list} \terminal{)}\br
   typename-specifier \terminal{(} \opt{expression} \terminal{)}\br
